Resize some allocation form fields

--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -15,7 +15,7 @@
     <ol class="section ">
       <li class="selfclear">
         <%= form.label :name %>
-        <%= form.text_field :name %>
+        <%= form.text_field :name, :size => 60 %>
       </li>
       
       <li class="selfclear">
@@ -25,7 +25,7 @@
       
       <li class="selfclear">
         <%= form.label :program %>
-        <%= form.text_field :program %>
+        <%= form.text_field :program, :size => 60 %>
       </li>
       
       <li class="selfclear">
@@ -65,17 +65,17 @@
       
       <li class="selfclear">
         <%= form.label :routematch_override %>
-        <%= form.text_field :routematch_override %>      
+        <%= form.text_field :routematch_override, :size => 60 %>
       </li>
       
       <li class="selfclear">
         <%= form.label :routematch_provider_code %>
-        <%= form.text_field :routematch_provider_code %>      
+        <%= form.text_field :routematch_provider_code, :size => 5 %>      
       </li>
       
       <li class="selfclear">
         <%= form.label :contract %>
-        <%= form.text_field :contract %>
+        <%= form.text_field :contract, :size => 60 %>
       </li>
 
       <li class="selfclear">
