--- a/app/views/trips/bpa_index.csv.erb
+++ b/app/views/trips/bpa_index.csv.erb
@@ -18,7 +18,7 @@
       trip.calculated_bpa_fare,
       trip.apportioned_fare,
       ((trip.calculated_bpa_fare || 0) - (trip.fare || 0)),
-      trip.allocation.routematch_override.try(:split,'::').try(:slice,0),
+      trip.allocation.override.try(:name).try(:split,'::').try(:slice,0),
       trip.customer_pay,
       trip.in_trimet_district ? 'In' : 'Out',
       trip.guest_count,
@@ -27,7 +27,7 @@
       trip.result_code,
       trip.customer.routematch_customer_id,
       trip.allocation.project.try(:project_number),
-      trip.allocation.routematch_override,
+      trip.allocation.override.try(:name),
       trip.purpose_type,
       trip.allocation.program,
       trip.estimated_trip_distance_in_miles,
