--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,6 +6,7 @@
   <li><%= link_to "Allocations", :controller => "allocations" %></li>
   <li><%= link_to "Providers", :controller => "providers" %></li>
   <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
+  <li><%= link_to "Overrides", :controller => "overrides" %></li>
   <li><%= link_to "TriMet Providers", :controller => "trimet_providers" %></li>
   <li><%= link_to "TriMet Programs", :controller => "trimet_programs" %></li>
   <li><%= link_to "TriMet Report Groups", :controller => "trimet_report_groups" %></li>
