--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <%= render 'form' %>
-
+<%= render 'shared/related_allocations', :target => @project %>
 <%= link_to 'Back', projects_path, :class => "action-bttn" %>
