--- a/app/views/providers/edit.html.erb
+++ b/app/views/providers/edit.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <%= render 'form' %>
-
+<%= render 'shared/related_allocations', :target => @provider %>
 <%= link_to 'Back', providers_path, :class => "action-bttn" %>
