--- a/app/views/trimet_programs/edit.html.erb
+++ b/app/views/trimet_programs/edit.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <%= render 'form' %>
-
+<%= render 'shared/related_allocations', :target => @trimet_program %>
 <%= link_to 'Back', trimet_programs_path, :class => "action-bttn" %>
