Remove unnecessary references to SPD

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -139,8 +139,8 @@
     </li>
     
     <li class="selfclear">
-      <%= f.label :spd_office, "SPD Office:" %>
-      <%= f.text_field :spd_office %>
+      <%= f.label :case_manager_office, "Case Manager Office:" %>
+      <%= f.text_field :case_manager_office %>
     </li>
     
     <li class="selfclear">
