--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <div id="crossbar">
     <div class="wrap selfclear">             
       <ul id="primary-nav" class="selfclear">
-        <li class="reports"><%= link_to "Reports", :controller => "reports" %></li>
+        <li class="flex-reports"><%= link_to "Flex Reports", :controller => "flex_reports" %></li>
         <li class="summaries"><%= link_to "Summaries", :controller => "summaries" %></li>
         <li class="trips"><%= link_to "Trips", :controller => "trips" %></li>
         <li class="runs"><%= link_to "Runs", :controller => "runs" %></li>
