--- a/app/views/flex_reports/index.html.erb
+++ b/app/views/flex_reports/index.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Predefined Reports</h1>
+  <h1>Flex Reports</h1>
 </div>
 
 <% if @reports.size == 0 %>
@@ -8,11 +8,11 @@
 
 <ul id="all-reports">
   <% for report in @reports %>
-    <li class="predefined-report" data-id="<%= report.id %>">
+    <li class="flex-report" data-id="<%= report.id %>">
       <%= form_for report, :html => { :method => 'delete' } do |f| %>
         <span class="handle">[Reorder]</span>
       
-        <%= link_to "Edit Report", edit_report_path(report), :class => "edit" %>
+        <%= link_to "Edit Report", edit_flex_report_path(report), :class => "edit" %>
         <input type="hidden" name="report[id]" value="<%= report.id %>" />
         <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
       <% end %>
