Begin moving predefined reports to their own controller

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,7 +3,8 @@
 </div>
 
 <ul id="dashboard">
-  <li><%= link_to "Reports", :controller => "reports" %></li>
+  <li><%= link_to "Flex Reports", :controller => "flex_reports" %></li>
+  <li><%= link_to "Predefined Reports", :controller => "predefined_reports" %></li>
   <li><%= link_to "Summaries", :controller => "summaries" %></li>
   <li><%= link_to "Trips", :controller => "trips" %></li>
   <li><%= link_to "Runs", :controller => "runs" %></li>
