Refactored flex reports, moved predefined reports to their own controller

--- a/app/views/flex_reports/_report.html.erb
+++ b/app/views/flex_reports/_report.html.erb
@@ -2,7 +2,7 @@
 <table>
   <%= render "header" %>
   <tbody>
-  <%= render :partial=> "nested_rows", :locals=>{:rows=>results, :group_fields => @group_fields} %>
+  <%= render :partial=> "nested_rows", :locals=>{:rows => results, :group_fields => group_fields} %>
   </tbody>
 </table>
 </div>
