--- a/app/views/flex_reports/_nested_rows.html.erb
+++ b/app/views/flex_reports/_nested_rows.html.erb
@@ -2,10 +2,10 @@
   <!-- an outer layer, print group headers with proper level of indentation -->
   <% rows.sort_by {|k,v| row_sort(k,v)}.each do |group_name, row| %>
     <tr> 
-      <% (@groups_size - group_fields.length).times do %>
+      <% (@report.groups.size - group_fields.length).times do %>
         <td class="indent">&nbsp;</td>
       <% end %>
-      <td class="report-item" colspan="<%= @fields.size + @group_fields.size %>"><%= group_name(row,group_fields) %></td>
+      <td class="report-item" colspan="<%= @report.results_fields.size + @report.group_fields.size %>"><%= group_name(row,group_fields) %></td>
     </tr> 
     <%= render "nested_rows", :rows => row, :group_fields => group_fields[1..-1] %>
     <%= render 'totals', :row=>row, :group_fields=>group_fields[1..-1], :short_name => short_group_name(row,group_fields) %>
@@ -17,6 +17,6 @@
   <% end %>
 <% end %>
 
-<% if group_fields.size == @levels %>
+<% if group_fields.size == @report.group_fields.size %>
 <%= render 'totals', :row=>rows, :group_fields=>group_fields, :name => "All" %>
 <% end %>
