--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -1,125 +1,125 @@
 <tr class="data">
-  <% (@groups_size - 1).times do %>
+  <% (@report.groups.size - 1).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
   
   <td class="inner-most-field"><%= label %></td>
-  <% if @fields.member? 'funds' %>
+  <% if @report.results_fields.member? 'funds' %>
     <td class="number">
       <%= number_to_currency(row.funds, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'agency_other' %>
+  <% if @report.results_fields.member? 'agency_other' %>
     <td class="number">
       <%= number_to_currency(row.agency_other, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'vehicle_maint' %>
+  <% if @report.results_fields.member? 'vehicle_maint' %>
     <td class="number">
       <%= number_to_currency(row.vehicle_maint, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'administrative' %>
+  <% if @report.results_fields.member? 'administrative' %>
     <td class="number">
       <%= number_to_currency(row.administrative, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'operations' %>
+  <% if @report.results_fields.member? 'operations' %>
     <td class="number">
       <%= number_to_currency(row.operations, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'donations' %>
+  <% if @report.results_fields.member? 'donations' %>
     <td class="number">
       <%= number_to_currency(row.donations, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'total' %>
+  <% if @report.results_fields.member? 'total' %>
     <td class="number">
       <%= number_to_currency(row.total, :precision => 0) %>
     </td>
   <% end %>
-  <% if @fields.member? 'in_district_trips' %>
+  <% if @report.results_fields.member? 'in_district_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.in_district_trips.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'out_of_district_trips' %>
+  <% if @report.results_fields.member? 'out_of_district_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.out_of_district_trips.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'total_trips' %>
+  <% if @report.results_fields.member? 'total_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.total_trips.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'total_last_year' %>
+  <% if @report.results_fields.member? 'total_last_year' %>
     <td class="number">
       <%= number_with_delimiter(row.total_last_year.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'mileage' %>
+  <% if @report.results_fields.member? 'mileage' %>
     <td class="number">
       <%= number_with_delimiter(row.mileage.round) %>
     </td>
   <% end %>
-  <% if @fields.member? 'driver_volunteer_hours' %>
+  <% if @report.results_fields.member? 'driver_volunteer_hours' %>
     <td class="number">
       <%= number_with_delimiter(row.driver_volunteer_hours.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'driver_paid_hours' %>
+  <% if @report.results_fields.member? 'driver_paid_hours' %>
     <td class="number">
       <%= number_with_delimiter(row.driver_paid_hours.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'driver_total_hours' %>
+  <% if @report.results_fields.member? 'driver_total_hours' %>
     <td class="number">
       <%= number_with_delimiter(row.driver_total_hours.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'cost_per_trip' %>
+  <% if @report.results_fields.member? 'cost_per_trip' %>
     <td class="number">
       <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip) : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @fields.member? 'cost_per_mile' %>
+  <% if @report.results_fields.member? 'cost_per_mile' %>
     <td class="number">
       <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile) : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @fields.member? 'cost_per_hour' %>
+  <% if @report.results_fields.member? 'cost_per_hour' %>
     <td class="number">
       <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour) : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @fields.member? 'miles_per_ride'%>
+  <% if @report.results_fields.member? 'miles_per_ride'%>
     <td class="number">
       <%= row.miles_per_ride.present? ? number_with_precision(row.miles_per_ride, :precision => 1, :delimiter => ",") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @fields.member? 'turn_downs' %>
+  <% if @report.results_fields.member? 'turn_downs' %>
     <td class="number">
       <%= number_with_delimiter(row.turn_downs.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'undup_riders' %>
+  <% if @report.results_fields.member? 'undup_riders' %>
     <td class="number">
       <%= number_with_delimiter(row.undup_riders.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'escort_volunteer_hours' %>
+  <% if @report.results_fields.member? 'escort_volunteer_hours' %>
     <td class="number">
       <%= number_with_delimiter(row.escort_volunteer_hours.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'admin_volunteer_hours' %>
+  <% if @report.results_fields.member? 'admin_volunteer_hours' %>
     <td class="number">
       <%= number_with_delimiter(row.admin_volunteer_hours.to_i) %>
     </td>
   <% end %>
-  <% if @fields.member? 'total_volunteer_hours' %>
+  <% if @report.results_fields.member? 'total_volunteer_hours' %>
     <td class="number">
       <%= number_with_delimiter(row.total_volunteer_hours.to_i) %>
     </td>
