--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -2,7 +2,7 @@
   <h1>Quarterly Narrative Report</h1>
 </div>
 
-<% for field, rows in @allocations %>
+<% for field, rows in @report.results %>
 <% allocation = get_row(rows).allocation %>
 <h2><%= allocation.provider_name %> &mdash; <%= describe_date_range(@report.start_date, @report.end_date) %></h2>
 <h3>Program: <%= allocation.name %></h3>
@@ -18,12 +18,12 @@ effects.</div>
 
 <div class="report-wrapper">
 <table>
-  <%= render "header" %>
+  <%= render "flex_reports/header" %>
   <% for month, row in rows do %>
-    <%= render "row", :row => row, :label => month %>
+    <%= render "flex_reports/row", :row => row, :label => month %>
   <% end %>
   
-  <%= render 'totals', :row=>rows, :group_fields=>@group_fields %>
+  <%= render 'flex_reports/totals', :row => rows, :group_fields => @report.group_fields %>
   
 </table>
 </div>
