--- a/app/views/predefined_reports/ride_purpose.html.erb
+++ b/app/views/predefined_reports/ride_purpose.html.erb
@@ -1,5 +1,5 @@
 <h1>Ride Purpose Report</h1>
-<h2><strong><%= @start_date.strftime "%B %Y" %></strong></h2>
+<h2><%= describe_date_range(@query.start_date, @query.end_date) %></h2>
 <table id="purpose-results">
   <thead>
     <tr>
