--- a/app/views/layouts/flex_reports.html.erb
+++ b/app/views/layouts/flex_reports.html.erb
@@ -1,10 +1,6 @@
 <% content_for :menu_bar do %>
   <ul id="subnav" class="selfclear">
-    <li><%= link_to "Define New Flex Report", new_flex_report_path %></li>
-    <li><%= link_to "Quarterly Narrative", :action=>:show_create_quarterly  %></li>
-    <li><%= link_to "Trip Purpose", :action=>:show_ride_purpose_report  %></li>
-    <li><%= link_to "A&E", :action=>:show_create_age_and_ethnicity  %></li>
-    <li><%= link_to "Active Rider", :action=>:show_create_active_rider  %></li>
+    <li><%= link_to "Define New Flex Report", new_flex_report_path, :class => :add %></li>
   </ul>
 <% end %>
 
