Fix flex report form description text area size

--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -182,7 +182,7 @@
       
       <div class="selfclear">
         <h2 class="section-header">Description</h2>
-        <%= f.text_area :description, :cols => nil, :rows => nil %>
+        <%= f.text_area :description, :cols => 50, :rows => 10 %>
       </div>
     </div>
 
