--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,8 @@
 <ul id="subnav" class="selfclear">
-  <li><%= link_to 'New Project', new_project_path, :class => :add if current_user.is_admin %></li>
+  <li><%= link_to 'New F.E. Project', new_project_path, :class => :add if current_user.is_admin %></li>
 </ul>
 <div id="page-header">
-  <h1>Listing projects</h1>
+  <h1>Listing Financial Edge Projects</h1>
 </div>
 
 <table>
