--- a/app/views/allocations/index.csv.erb
+++ b/app/views/allocations/index.csv.erb
@@ -24,6 +24,7 @@
       'TriMet Provider',
       'TriMet Program',
       'TriMet E&D Report Group',
+      'Activated Date',
       'Inactivated Date'
 ] %>
 <% csv = '' %>
@@ -57,6 +58,7 @@
       a.trimet_provider.try(:name),
       a.trimet_program.try(:name),
       a.trimet_report_group.try(:name),
+      a.activated_on,
       a.inactivated_on
     ] %>
     <% csv << row %>
