--- a/app/views/overrides/index.html.erb
+++ b/app/views/overrides/index.html.erb
@@ -2,7 +2,7 @@
   <li><%= link_to 'New Override', new_override_path, :class => :add if current_user.is_admin %></li>
 </ul>
 <div id="page-header">
-  <h1>Listing Overrides</h1>
+  <h1>Listing RouteMatch Overrides</h1>
 </div>
 
 <table>
