--- a/app/views/predefined_reports/multnomah_ads.html.erb
+++ b/app/views/predefined_reports/multnomah_ads.html.erb
@@ -21,11 +21,11 @@
     </tr>
   </thead>
   <tbody>
-    <% @runs_billed_per_hour.each do |run| %>
+    <% @run_groups.keys.sort{|a,b| a.start_at <=> b.start_at}.each do |run| %>
       <tr>
         <td>Hourly Trip</td>
-        <td><%= run.date %></td>
-        <td><%= run.start_at.to_s(:date) %></td>
+        <td><%= run.date.to_s(:mdy) %></td>
+        <td><%= run.start_at.to_s(:time_only) %></td>
         <td><%= run.ads_billable_hours %> billable hours</td>
         <td></td>
         <td></td>
@@ -35,13 +35,13 @@
         <td class="number"><%= number_to_currency(run.ads_total_cost) %></td>
         <td><%= run.trips.first.allocation.provider.name %></td>
       </tr>
-      <% run.trips.each do |t| %>
+      <% @run_groups[run].each do |t| %>
         <tr>
           <td><%= t.customer.name %></td>
-          <td><%= t.date.to_s %></td>
-          <td><%= t.start_at.to_s(:date) %></td>
-          <td><%= t.pickup_address.full_address %> </td>
-          <td><%= t.dropoff_address.full_address %> </td>
+          <td><%= t.date.to_s(:mdy) %></td>
+          <td><%= t.start_at.to_s(:time_only) %></td>
+          <td><%= t.pickup_address.full_address %></td>
+          <td><%= t.dropoff_address.full_address %></td>
           <td><%= t.case_manager_office %></td>
           <td class="number"><%= number_to_currency(t.ads_partner_cost) %></td>
           <td class="number"><%= number_to_currency(t.ads_taxi_cost) %></td>
@@ -51,11 +51,11 @@
         </tr>
       <% end %>
     <% end %>
-    <% @trips_billed_per_trip.each do |t| %>
+    <% @trips_billed_per_trip.sort{|a,b| a.customer.name <=> b.customer.name}.each do |t| %>
       <tr>
         <td><%= t.customer.name %></td>
-        <td><%= t.date.to_s %></td>
-        <td><%= t.start_at.to_s(:date) %></td>
+        <td><%= t.date.to_s(:mdy) %></td>
+        <td><%= t.start_at.to_s(:time_only) %></td>
         <td><%= t.pickup_address.full_address %> </td>
         <td><%= t.dropoff_address.full_address %> </td>
         <td><%= t.case_manager_office %></td>
@@ -67,5 +67,35 @@
       </tr>
     <% end %>
   </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="6"></td>
+      <td class="number"><%= number_to_currency(@total_partner_cost) %></td>
+      <td class="number"><%= number_to_currency(@total_taxi_cost) %></td>
+      <td class="number"><%= number_to_currency(@total_scheduling_fee) %></td>
+      <td class="number"><%= number_to_currency(@total_cost) %></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Total Billable Hours</td>
+      <td class="number"><%= @total_billable_hours %></td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp;&nbsp;Hourly Trips</td>
+      <td class="number"><%= @per_hour_trip_count %></td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp;&nbsp;Taxi Trips</td>
+      <td class="number"><%= @taxi_trip_count %></td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp;&nbsp;Partner Trips</td>
+      <td class="number"><%= @partner_trip_count %></td>
+    </tr>
+    <tr>
+      <td>Total Trip Count</td>
+      <td class="number"><%= @per_hour_trip_count + @taxi_trip_count + @partner_trip_count %></td>
+    </tr>
+  </tfoot>
 </table>
 
