--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -162,7 +162,8 @@
           <%= f.text_field :end_date, :class => "datepicker", :placeholder => "yyyy-mm-dd", :id => :ads_end_date, :required => :required %>
         </li>
       </ol>
-      <input type="submit" name="report" value="Report">
+      <input type="submit" name="output" value="Report">
+      <input type="submit" name="output" value="CSV">
     </fieldset>
   <% end %>
 </div>
