--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -27,8 +27,8 @@
       <li><%= f.label :turn_downs, "Turn Downs:" %> <%= f.text_field :turn_downs, :tabindex=>3 %></li>
 
       <li><%= f.label :unduplicated_riders, "Unduplicated Riders:" %> <%= f.text_field :unduplicated_riders, :tabindex=>3 %></li>
-      <li><%= f.label :driver_hours_paid, "Paid Driver Hours" %> <%= f.text_field :driver_hours_paid, :tabindex=>3 %></li>
-      <li><%= f.label :driver_hours_volunteer, "Volunteer Driver Hours" %> <%= f.text_field :driver_hours_volunteer, :tabindex=>3 %></li>
+      <li><%= f.label :driver_hours_paid, "Driver Hours: Paid" %> <%= f.text_field :driver_hours_paid, :tabindex=>3 %></li>
+      <li><%= f.label :driver_hours_volunteer, "Driver Hours: Volunteer" %> <%= f.text_field :driver_hours_volunteer, :tabindex=>3 %></li>
       <li><%= f.label :escort_hours_volunteer, "Volunteer Escort Hours" %> <%= f.text_field :escort_hours_volunteer ,:tabindex=>3 %></li>
       <li><%= f.label :administrative_hours_volunteer, "Volunteer Admin Hours:" %> <%= f.text_field :administrative_hours_volunteer, :tabindex=>3 %></li>
       <li><%= f.label :funds, "RC Funds:" %> <%= f.text_field :funds, :tabindex=>3 %></li>
