--- a/app/views/predefined_reports/multnomah_ads.html.erb
+++ b/app/views/predefined_reports/multnomah_ads.html.erb
@@ -1,5 +1,12 @@
 <div id="page-header">
-  <h1>Multnomah County ADS Report</h1>
+  <h1>
+    Multnomah County ADS Report
+    <% if @query.provider_id.present? %>
+      &mdash; <%= Provider.find(@query.provider_id).name %>
+    <% else %>
+      &mdash; All Providers
+    <% end %>
+  </h1>
 </div>
 
 <h2><%= describe_date_range(@query.start_date, @query.end_date) %></h2>
