--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -41,6 +41,12 @@
       </li>
       
       <li class="selfclear">
+        <%= form.label :reporting_agency_id %>
+        <%= form.collection_select :reporting_agency_id, Provider.default_order, :id, :to_s, :include_blank => true %>
+        <%= link_to "Details", [:edit, @allocation.reporting_agency], :class => :details if @allocation.reporting_agency %>
+      </li>
+      
+      <li class="selfclear">
         <%= form.label :county %>
         <%= form.text_field :county %>
       </li>
