--- a/app/views/trimet_report_groups/edit.html.erb
+++ b/app/views/trimet_report_groups/edit.html.erb
@@ -3,5 +3,5 @@
 </div>
 
 <%= render 'form' %>
-<%= render 'shared/related_allocations', :target => @trimet_report_group %>
+<%= render 'shared/related_allocations', :target => @trimet_report_group.allocations %>
 <%= link_to 'Back', trimet_report_groups_path, :class => "action-bttn" %>
